# SimpleEventPlanner

./: LICENSE  README.md
sep_backend/: .env.example  manage.py  pyproject.toml
sep_backend/authentication/: urls.py  views.py
sep_backend/sep_backend/: asgi.py  settings.py  urls.py  wsgi.py
sep_backend/sep_backend/authentication/: apps.py  urls.py  views.py
sep_backend/sep_backend/core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
sep_backend/sep_backend/core/management/commands/: seed.py
sep_backend/sep_backend/core/migrations/: 0001_initial.py  0002_rename_name_eventtype_title.py  0003_alter_eventtype_user.py  0004_alter_eventtype_unique_together.py  0005_alter_event_options_event_created_event_modified_and_more.py  0006_eventtype_color.py
sep_frontend/: .env.example  next.config.mjs  package-lock.json  package.json
sep_frontend/src/: types.ts
sep_frontend/src/app/: globals.css  globals.scss  layout.tsx  page.tsx  site.webmanifest  theme.ts
sep_frontend/src/app/about/: page.tsx
sep_frontend/src/app/api/auth/[...nextauth]/: route.ts
sep_frontend/src/app/layout_components/: CustomLink.tsxasda.old  SiteNav.tsx
sep_frontend/src/app/login/: page.tsx
sep_frontend/src/app/planner/: page.tsx
sep_frontend/src/app/test/: page.tsx
sep_frontend/src/layout_components/: AuthClientContext.tsx  CustomInput.tsx  FormErrorMessage.tsx  Link.tsx  LoadingFullScreen.tsx  LoginForm.tsx  SiteFooter.tsx  SiteNav.tsx
sep_frontend/src/lib/: axios.tsx
sep_frontend/src/models/: EventAndEventType.tsx
sep_frontend/src/store/: useMainStore.tsx
(+7 files in other folders)
